[package]
name = "tiled_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lib]
name = "tiled_game"
path = "src/lib/mod.rs"

[[client]]
name = "tiled_game_client"
path = "src/client/main.rs"

[[server]]
name = "tiled_game_server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0.69"
bevy = "0.9.1"
bevy_ecs_tilemap = "0.9.0"
bevy_rapier2d = { version = "0.20.0", features = [ "simd-stable", "parallel" ] }
bevy_renet = "0.0.6"
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
tiled = "0.10.2"
