[package]
name = "tiled_game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[lib]
name = "tiled_game"
path = "src/lib/mod.rs"

[[client]]
name = "tiled_game_client"
path = "src/client/main.rs"

[[server]]
name = "tiled_game_server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0.69"
bevy = "0.10"
bevy-inspector-egui = "0.18.1"
# temporary use main branch of ecs tilemap until they release the version which supports bevy 0.10
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", branch = "main" }
bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "parallel" ] }
bevy_renet = "0.0.7"
bevy_spatial = { version = "0.4.0", features =  [ "kdtree" ] }
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }
tiled = "0.10.2"
