[package]
name = "tiled_game"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1

[lib]
name = "tiled_game"
path = "src/lib/mod.rs"

[[client]]
name = "tiled_game_client"
path = "src/client/main.rs"

[[server]]
name = "tiled_game_server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0.69"
bevy = "0.11"
bevy-inspector-egui = "0.19.0"
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", branch = "main" }
bevy_rapier2d = { version = "0.22.0", features = [ "simd-stable", "parallel" ] }
bevy_renet = "0.0.9"
bevy_spatial = { version = "0.6.0", features =  [ "kdtree" ] }
bincode = "1.3.3"
serde = { version = "1.0.188", features = ["derive"] }
tiled = "0.11.1"
